--- a/pom.xml
+++ b/pom.xml
@@ -54,11 +54,11 @@
 				</exclusion>
 			</exclusions>
 		</dependency>
-		<dependency>
-			<groupId>com.sezzle</groupId>
-			<artifactId>calculator</artifactId>
-			<version>0.0.1-SNAPSHOT</version>
-		</dependency>
+<!--		<dependency>-->
+<!--			<groupId>com.sezzle</groupId>-->
+<!--			<artifactId>calculator</artifactId>-->
+<!--			<version>0.0.1-SNAPSHOT</version>-->
+<!--		</dependency>-->
 	</dependencies>
 
 	<build>
